# skyfield-data

./: .gitignore  .travis.yml  CHANGELOG.md  COPYING  MANIFEST.in  Makefile  README.md  download.py  pyproject.toml  setup.cfg  tox-py26.ini  tox.ini
.circleci/: config.yml
.github/workflows/: tests.yml
skyfield_data/: __init__.py  expiration_data.py  expirations.py
skyfield_data/data/: finals2000A.all
tests/: test_expiration_date.py  test_get_path.py
