[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skyfield-data"
version = "7.0.0.dev0"
description = "Data package for Skyfield"
readme = "README.md"
license = {file = "COPYING"}
authors = [
    {name = "Bruno Bord", email = "bruno@jehaisleprintemps.net"}
]
keywords = ["astronomy", "science"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.6",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=2.6, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, !=3.6.*, !=3.7.*, <4"

[project.urls]
Homepage = "https://github.com/brunobord/skyfield-data"

[project.optional-dependencies]
dev = [
    "jplephem",
    "numpy",
    "tox",
    "colorama",
    "termcolor",
]
tests = [
    "pytest",
    "skyfield",
    "mock",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["skyfield_data*"]

[tool.bdist_wheel]
universal = true
