[metadata]
name = skyfield-data
version = 0.0.1
author = Bruno Bord
author-email = bruno@jehaisleprintemps.net
home-page = https://github.com/brunobord/skyfield-data
description = Data package for Skyfield
long-description = file: README.md
long-description-content-type = text/markdown
license = MIT
license-file = COPYING
platform = any
keywords = astronomy science
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = false
include_package_data = True
python_requires = >= 3.3
packages = skyfield_data
setup_requires =
    setuptools
