[metadata]
name = skyfield-data
version = 6.1.0.dev0
author = Bruno Bord
author-email = bruno@jehaisleprintemps.net
home-page = https://github.com/brunobord/skyfield-data
description = Data package for Skyfield
long-description = file: README.md
long-description-content-type = text/markdown
license = MIT
license-file = COPYING
platform = any
keywords = astronomy science
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = false
include_package_data = True
python_requires = >=2.6, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, !=3.6.*, <4
packages = skyfield_data
setup_requires =
    setuptools

[options.extras_require]
dev =
    jplephem
    numpy
    tox
    colorama
    termcolor
tests =
    pytest
    skyfield
    mock
    # ipdb

[bdist_wheel]
universal = 1
